--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1713,107 +1713,107 @@ stories:
   domain: http://www.ottumwacourier.com/
   link: https://www.ottumwacourier.com/region/grizzlies-preservan-ventaja-y-derrotan-a-thunder/image_446ec251-5b05-54dd-833c-7f6f3ec9e4db.html
 images:
-- name: old-barn-old-barn-1500-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-far-away.jpg
-- name: stories-cargo-ship-on-sea-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-blue-circuit.jpg
-- name: hollywood-building-hollywood-building-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-diego-rivera1.jpg
-- name: old-gas-pumps-oldgaspumps-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-hot-spicy.jpg
+- name: copper-circuit-old-comuter-wheels-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-comuter-wheels-crypto.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
+- name: razorwire-DSC-0080-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
+- name: capital-battle-capitolbattle-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-umberto-bocc.jpg
+- name: hollywood-building-hollywood-building-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-plentiful.jpg
+- name: power-lines-power-lines-empty-space-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-three.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
+- name: udnie-IMG_8471.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8471.jpg
+- name: downtown-trucksilo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-bright-sand.jpg
+- name: old-school-house-old-schoolhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-spagetti-accident.jpg
+- name: stories-ellis-island-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellis-island-nazi-poster.jpg
+- name: oldcabin-store.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+- name: braceros-domingo-ulloa-old-church_36588495271_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-church_36588495271_o.jpg
+- name: oldbarn-oldbarn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smoking-cigarette.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
+- name: ellis-island-ellisisland-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-rain.jpg
 - name: oldcabin-oldcabin-clean-view.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-clean-view.jpg
-- name: walled-garden-walled-garden-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-really-hot.jpg
-- name: aws-s3-square-C3JdRtDWMAUqS6L.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L.jpg
-- name: liberty-back-statue-liberty-back-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-bright-sand.jpg
-- name: aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
-- name: supreme-court-supremecourt-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-feed-people.jpg
-- name: bordercrossing-bordercrossing-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-satan-red.jpg
-- name: fence-fence-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-three.jpg
-- name: eduardo-eduardo-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-deep-connections.jpg
-- name: old-granary-field-oldhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-post-modern.jpg
-- name: bordercrossing-bordercrossing-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smoking-cigarette.jpg
-- name: downtown-trucksilo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-dali.jpg
-- name: cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
-- name: copper-circuit-statue-of-liberty-front-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty-front-bright.jpg
-- name: powerlines-power-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-spagetti-accident.jpg
-- name: stalin-time-fishing-ship-in-docks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-fishing-ship-in-docks.jpg
-- name: castle-wall-DSC-0067-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-propaganda-leaflets.JPG
-- name: fence-mexico-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smoking-cigarette.jpg
-- name: catacombs-catacombs-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-missle.jpg
-- name: oldroad-old-road-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dali-two.jpg
-- name: cargo-ship-cargo-ship-on-sea-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-dali.jpg
-- name: locked-up-steam-lock-up-steam-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-constitution.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
-- name: copper-circuit-walk-through-garden-tunnel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-walk-through-garden-tunnel.jpg
-- name: adam-smith-adam-smith-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
-- name: bf-skinner-old-time-cash-register.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-time-cash-register.jpg
-- name: oldhotel-oldhotel-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-diego-rivera1.jpg
-- name: legal-statue-legalstatue-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-two.jpg
-- name: oldcabin-store-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-pond.jpg
-- name: oldcabin-oldcabin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
-- name: supreme-court-supremecourt-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-constitution.jpg
-- name: liberty-back-statue-liberty-back-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-green-zuma.jpg
-- name: border-fence-border-fence-on-hill-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-circuit.jpg
-- name: containership-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-- name: birdhouse-birdhouse-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-graham-sutherland.jpg
-- name: windowmountain-window-mountain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
-- name: power-lines-power-lines-empty-space-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crunch-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-soul.jpg
-- name: stories-downtown-fredericksburg-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-nazi-poster.JPG
-- name: art-museum-art-museum-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-color.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
-- name: bluelake-gan-vogh-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-01-17-38.jpg
-- name: old-granary-field-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crafty-painting.jpg
-- name: store-on-corner-oldcabin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-circuit.jpg
-- name: server-cloud-server-racks-door-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit-2.jpg
-- name: server-cloud-server-racks-door-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alien-goggles.jpg
+- name: machine-road-machine-road-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-emily-carr.jpg
+- name: carry-load-carryload-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-two.jpg
+- name: oldcabin-store-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-gred-mash.jpg
+- name: rain-princess-DSC_0264.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0264.jpg
+- name: carry-load-carryload-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-aqua.jpg
+- name: server-cloud-server-racks-door-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-wols.jpg
+- name: stalin-time-old-piano-playing-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-piano-playing-hospital.jpg
+- name: old-cabin-oldcabin-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crabapple.jpg
+- name: power-lines-power-lines-empty-space-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-diego-rivera1.jpg
+- name: ellis-island-ellisisland-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-alien-goggles.jpg
+- name: windowmountain-window-mountain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dry-skin.jpg
+- name: stalin-time-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-fat-old-pigeon-on-fence.jpg
+- name: downtheline-downtheline-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-yellow-collage.jpg
+- name: christianity-christianity-under-construction-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-plentiful.jpg
+- name: capital-battle-capitolbattle-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-dream.jpg
+- name: eduardo-eduardo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-colored-circuits.jpg
+- name: downtown-los-angeles-downtown-la-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-constitution.JPG
+- name: meadowbutterfly-meadow-butterfly-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-space-pizza.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+- name: amusement-park-amusement-park-2-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-constitution.jpg
+- name: gypsymosaic-gypsy-eyes-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-aqua.jpg
+- name: stories-new-68-174-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-174-800-500-0-max-0--5--1.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+- name: gypsy-wagon-gypsywagon-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-bright-sand.jpg
+- name: copper-circuit-castle-window_35928999923_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-window_35928999923_o.jpg
+- name: art-museum-art-museum-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colorful-blocks.jpg
+- name: lincoln-memorial-lincolnmemorial-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-sunday.jpg
+- name: catacombs-catacombs-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-neo-instinct.jpg
+- name: dragon-desert-desert-dragon-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dry-skin.jpg
+- name: braceros-domingo-ulloa-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-clouds-waterfront.jpg
+- name: crow_spagetti_accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_spagetti_accident.jpg
+- name: old-granary-field-oldhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sunday.jpg
 ---
 Burger King Coming To Kingstree.&nbsp;The Men Who Held The Line.&nbsp;Titans' Henry Will Play Vs Houston With Playoff Spot On Line.&nbsp;Sister Ruth Crop Walk.&nbsp;Dearborn's Most Wanted Car Thief Is Awaiting Trial.&nbsp;Target Shooting Is A Favorite Pastime.&nbsp;New Film Explores The Life Of Linda Ronstadt.&nbsp;Keisha And Justin Chase Godsey And Landen.&nbsp;
